tests/neg/namespace-import-branch/main.stk
namespace app

import test    // error

fun main =
  test.lib.double 10 p
